// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BoilingVerdict boils 1`] = `
<p>
  The water would boil.
</p>
`;

exports[`BoilingVerdict not boils 1`] = `
<p>
  The water would not boil.
</p>
`;
